# ethercat_utils

./: README.md
ethercat_utils/: CMakeLists.txt  gpio_controller_plugins.xml  package.xml
ethercat_utils/include/ethercat_utils/: battery_cell_utils.hpp  cia402_slave_utils.hpp  gpio_controller.hpp
ethercat_utils/src/: battery_cell_utils_manager.cpp  cia402_slave_manager.cpp
ethercat_utils/src/ethercat_utils/: battery_cell_utils.cpp  cia402_slave_utils.cpp  gpio_controller.cpp
ethercat_utils_msgs/: CMakeLists.txt  package.xml
ethercat_utils_msgs/msg/: GPIOArray.msg
